# django-journey

./: CHANGELOG.md  README.md  render.yaml
chapter-01-setup/: pyproject.toml
chapter-01-setup/django_project/: settings.py
chapter-02-hello-world-app/: build.sh  pyproject.toml
chapter-02-hello-world-app/django_project/: settings.py  urls.py
chapter-02-hello-world-app/pages/: urls.py  views.py
chapter-03-pages-app/: build.sh  pyproject.toml  render.yml  requirements.txt
chapter-03-pages-app/django_project/: settings.py  urls.py
chapter-03-pages-app/pages/: tests.py
chapter-03-pages-app/templates/: base.html
chapter-04-message-board-app/: pyproject.toml
chapter-04-message-board-app/django_project/: settings.py  urls.py
chapter-04-message-board-app/posts/: models.py  tests.py
chapter-04-message-board-app/posts/migrations/: 0001_initial.py
chapter-04-message-board-app/templates/: home.html
