[tool.poetry]
name = "ch1-setup"
version = "0.1.0"
description = ""
authors = ["Kevin Hernández Rostrán <kevinah95@gmail.com>"]
readme = "README.md"
packages = [{include = "ch1_setup"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
