[tool.poetry]
name = "chapter-03-pages-app"
version = "0.1.0"
description = ""
authors = ["Kevin Hernández Rostrán <kevinah95@gmail.com>"]
readme = "README.md"
packages = [{include = "chapter_03_pages_app"}]

[tool.poetry.dependencies]
python = "^3.11.2"
django = "^4.1.7"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
