[tool.poetry]
name = "chapter-04-message-board-app"
version = "0.1.0"
description = ""
authors = ["Kevin Hernández Rostrán <kevinah95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.2"
django = "^4.1.7"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
